# urirun-connector-urivision-runtime

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_urivision_runtime.py
urirun_connector_urivision_runtime/: __init__.py  connector.manifest.json  contracts.json  core.py
