[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-urivision-runtime"
version = "0.1.0"
description = "Native runtime:// URI surface over urivision's CapabilityRegistry (catalog / explain / guarded call) for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = ["urirun>=0.4.14", "urivision>=0.1.0"]

[project.scripts]
urirun-urivision-runtime = "urirun_connector_urivision_runtime.core:main"

[project.entry-points."urirun.bindings"]
urivision-runtime = "urirun_connector_urivision_runtime.core:urirun_bindings"

[tool.setuptools.packages.find]
include = ["urirun_connector_urivision_runtime*"]

[tool.setuptools.package-data]
urirun_connector_urivision_runtime = ["connector.manifest.json", "contracts.json"]
